--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: Página pessoal de João Silva
+title: Blog pessoal de João Silva
 description: Aqui coloco novidades sobre os meus projetos
-author: joao Soares e Silva
+author: joao Silva
